vcs/specs/meta-system/fail/context/duplicate_context.vr
// @test: meta-fail
// @level: L1
// @expected-error: M205
// @description: Tests detection of duplicate context specifications
// @tags: meta-system, context, duplicate

// Same context specified twice in using clause should be an error
meta fn duplicate_using() -> Int using [MetaTypes, MetaTypes] {
    size_of(Int)
}

fn main() {
    @const assert(duplicate_using() > 0);
}
